infra/k8s/expiration-depl.yaml
# Define a Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl # Name of the Deployment
spec:
  replicas: 1 # Number of pod replicas to run
  selector:
    matchLabels:
      app: expiration # Select pods with the label 'app: expiration'
  template:
    metadata:
      labels:
        app: expiration # Apply the label 'app: expiration' to the pods created by this template
    spec:
      containers:
        - name: expiration # Name of the container
          image: comauro7511/expiration # Docker image to use for this container
