infra/k8s/client-depl.yaml
# Define a Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl # Name of the Deployment
spec:
  replicas: 1 # Number of pod replicas to run
  selector:
    matchLabels:
      app: client # Select pods with the label 'app: client'
  template:
    metadata:
      labels:
        app: client # Apply the label 'app: client' to the pods created by this template
    spec:
      containers:
        - name: client # Name of the container
          image: comauro7511/client # Docker image to use for this container

---
# Define a Service
apiVersion: v1
kind: Service
metadata:
  name: client-srv # Name of the Service
spec:
  type: ClusterIP # Service type; ClusterIP exposes the Service on a cluster-internal IP
  selector:
    app: client # Select pods with the label 'app: client'
  ports:
    - name: client # Name of the port
      protocol: TCP # Protocol to use
      port: 3000 # Port on which the Service is exposed
      targetPort: 3000 # Port on the pod that the Service should forward traffic to
