infra/k8s/expiration-redis-depl.yaml
# Define a Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-depl # Name of the Deployment
spec:
  replicas: 1 # Number of pod replicas to run
  selector:
    matchLabels:
      app: expiration-redis # Select pods with the label 'app: expiration-redis'
  template:
    metadata:
      labels:
        app: expiration-redis # Apply the label 'app: expiration-redis' to the pods created by this template
    spec:
      containers:
        - name: expiration-redis # Name of the container
          image: redis # Docker image to use for this container

---
# Define a Service
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-srv # Name of the Service
spec:
  type: ClusterIP # Service type; ClusterIP exposes the Service on a cluster-internal IP
  selector:
    app: expiration-redis # Select pods with the label 'app: expiration-redis'
  ports:
    - name: db # Name of the port
      protocol: TCP # Protocol to use
      port: 6379 # Port on which the Service is exposed
      targetPort: 6379 # Port on the pod that the Service should forward traffic to
