infra/k8s/orders-depl.yaml
# Define a Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl # Name of the Deployment
spec:
  replicas: 1 # Number of pod replicas to run
  selector:
    matchLabels:
      app: orders # Select pods with the label 'app: orders'
  template:
    metadata:
      labels:
        app: orders # Apply the label 'app: orders' to the pods created by this template
    spec:
      containers:
        - name: orders # Name of the container
          image: comauro7511/orders # Docker image to use for this container
---
# Define a Service
apiVersion: v1
kind: Service
metadata:
  name: orders-srv # Name of the Service
spec:
  type: ClusterIP # Service type; ClusterIP exposes the Service on a cluster-internal IP
  selector:
    app: orders # Select pods with the label 'app: orders'
  ports:
    - name: orders # Name of the port
      protocol: TCP # Protocol to use
      port: 3000 # Port on which the Service is exposed
      targetPort: 3000 # Port on the pod that the Service should forward traffic to
