infra/k8s/payments-depl.yaml
# Define a Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl # Name of the Deployment
spec:
  replicas: 1 # Number of pod replicas to run
  selector:
    matchLabels:
      app: payments # Select pods with the label 'app: payments'
  template:
    metadata:
      labels:
        app: payments # Apply the label 'app: payments' to the pods created by this template
    spec:
      containers:
        - name: payments # Name of the container
          image: comauro7511/payments # Docker image to use for this container
---
# Define a Service
apiVersion: v1
kind: Service
metadata:
  name: payments-srv # Name of the Service
spec:
  type: ClusterIP # Service type; ClusterIP exposes the Service on a cluster-internal IP
  selector:
    app: payments # Select pods with the label 'app: payments'
  ports:
    - name: payments # Name of the port
      protocol: TCP # Protocol to use
      port: 3000 # Port on which the Service is exposed
      targetPort: 3000 # Port on the pod that the Service should forward traffic to
