infra/k8s/tickets-depl.yaml
# Define a Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl # Name of the Deployment
spec:
  replicas: 1 # Number of pod replicas to run
  selector:
    matchLabels:
      app: tickets # Select pods with the label 'app: tickets'
  template:
    metadata:
      labels:
        app: tickets # Apply the label 'app: tickets' to the pods created by this template
    spec:
      containers:
        - name: tickets # Name of the container
          image: comauro7511/tickets # Docker image to use for this container
---
# Define a Service
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv # Name of the Service
spec:
  type: ClusterIP # Service type; ClusterIP exposes the Service on a cluster-internal IP
  selector:
    app: tickets # Select pods with the label 'app: tickets'
  ports:
    - name: tickets # Name of the port
      protocol: TCP # Protocol to use
      port: 3000 # Port on which the Service is exposed
      targetPort: 3000 # Port on the pod that the Service should forward traffic to
