infra/k8s/ingress-srv.yaml
# This file defines an Ingress resource to manage external access to services in the cluster

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service # Name of the Ingress resource
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true" # Annotation to enable regex support in paths

spec:
  ingressClassName: nginx # Specifies the Ingress class to be used (nginx in this case)
  rules:
    - host: ticketing.dev # Hostname for which this rule applies
      http:
        paths: # Ingress controller is going to match the paths in order here from top to bottom
          - path: /api/users/?(.*) # Path pattern for routing, with regex support
            pathType: ImplementationSpecific # Path matching behavior (specific to the ingress controller)
            backend:
              service:
                name: auth-srv # Name of the service to route traffic to
                port:
                  number: 3000 # Port on the service to route traffic to
          - path: /api/tickets/?(.*) # Path pattern for routing, with regex support
            pathType: ImplementationSpecific # Path matching behavior (specific to the ingress controller)
            backend:
              service:
                name: tickets-srv # Name of the service to route traffic to
                port:
                  number: 3000 # Port on the service to route traffic to
          - path: /api/orders/?(.*) # Path pattern for routing, with regex support
            pathType: ImplementationSpecific # Path matching behavior (specific to the ingress controller)
            backend:
              service:
                name: orders-srv # Name of the service to route traffic to
                port:
                  number: 3000 # Port on the service to route traffic to
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-srv # Name of the service to route traffic to
                port:
                  number: 3000 # Port on the service to route traffic to
